BUG: Rightmost column not quite the correct width in IE7 calendars.
QA: Open up a calendar view in IE7. Previously, the rightmost 
day was noticeably too large. Now, it should be just barely 
too small, but not noticeably so. If it's really obvious in 
any case (eg different browser widths), consider the bug 
unresolved.
Also check the other browsers to make sure they still look 
normal.

--- a/public/stylesheets/fullcalendar.css
+++ b/public/stylesheets/fullcalendar.css
@@ -23,6 +23,11 @@
     vertical-align: top;
 }
 
+.fc th
+{
+    padding: 0.3em 0;
+}
+
 .fc-content td, .fc-content th
 { font-size: 1.2em; }
 
